# verilog-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
tests/: sample.v  test_parser.py
verilog_parser/: __init__.py  __main__.py  parser.py  utils.py
