[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verilog-parser"
version = "0.1.0"
description = "Pure-Python parser for Verilog cell-library files"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = ["EDA", "Verilog", "netlist", "VLSI", "semiconductor", "cell library", "pins"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
color = ["termcolor>=1.1"]
dev   = ["pytest>=7", "termcolor>=1.1"]

[project.scripts]
verilog-parser = "verilog_parser.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["verilog_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
